<resources>
    <string name="app_name">Qook</string>
    <string name="reset_level_button">Reset</string>
    <string name="undo_level_button">Back</string>
    <string name="continue_game_button_text">Continue</string>
    <string name="new_game_button_text">Start</string>
    <string name="select_level_button_text">Levels</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="exit_button_text">Quit</string>
    <string name="levels_hint">Levels</string>
    <string name="app_name_about">Qook v1.3</string>
    <string name="author_nick_about">Author: GrakovNe</string>
    <string name="author_name_about">(Maksim Grakov)</string>
    <string name="author_address_about">Omsk, Russia</string>
    <string name="app_year_about">2016</string>
    <string name="off_animation">Turn off the animation</string>
    <string name="on_animation">Turn on the animation</string>
    <string name="game_task">Your task is to throw all the chips on the field in their wells</string>
    <string name="game_description">Qook is extremely difficult puzzle game in which you have to clear the playing field from the colored chips, throwing them into the wells of the same color.</string>
    <string name="game_rules">Chips of different colors moving on the playing field. They can move up, down, left or right to the first obstacle. Once the chip falls into the hole of the same color, it disappears from the game board</string>
    <string name="additional_button_text">Additional</string>
    <string name="open_all_levels_button_text">open all levels</string>
    <string name="cancel_turn_button_text">turns cancel</string>
    <string name="undo_purchased">Undo purchased!</string>
    <string name="purchase_undo_buy_button_text">Turn back</string>
</resources>
