<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.grakovne.qook.ui.activities.AboutActivity">

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/author_text"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:textSize="28dp"
            android:text="@string/app_name_about"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/author_nick_about"/>

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:textSize="24dp"
            android:text="@string/author_name_about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/author_address_about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/app_year_about"/>
    </LinearLayout>

    <ImageView
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/author_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_above="@id/author_text"
        android:layout_marginBottom="14sp"
        android:src="@drawable/author_icon"/>

</RelativeLayout>
