<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.grakovne.qook.ui.activities.MenuActivity">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="48sp"
            android:textStyle="bold" />


        <ScrollView
            android:id="@+id/menu_buttons_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9">

            <LinearLayout
                android:id="@+id/menu_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="bottom"
                android:orientation="vertical"
                android:weightSum="1">

                <Button
                    android:id="@+id/continue_game_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_normal"
                    android:text="@string/continue_game_button_text" />

                <Button
                    android:id="@+id/select_level_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_normal"
                    android:text="@string/select_level_button_text" />


                <Button
                    android:id="@+id/help_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_normal"
                    android:text="@string/help_button_text" />

                <Button
                    android:id="@+id/about_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_normal"
                    android:text="@string/about_button_text" />

            </LinearLayout>

        </ScrollView>

</LinearLayout>
